tests/valid/trait/method_call_short_ufcs_struct_param.facet
struct Job {
  id: unrestricted isize
}

trait Runner {
  fn run(self: Self) -> ();
}

impl Runner for unrestricted Job {
  fn run(self: Self) -> () {
    ()
  }
}

fn main(job: unrestricted Job) -> unrestricted () {
  (Runner::run job)
}
