tests/invalid/trait/unknown_trait_impl.facet
struct Box {
  value: unrestricted isize
}

impl Missing for unrestricted Box;

fn main() -> unrestricted () {
  ()
}
